--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,22 +32,22 @@ website:
         menu:
           - icon: person-raised-hand
             text: Office hours
-            href: https://docs.google.com/spreadsheets/d/1Bft17R-KHqjK3LlK8aRUEQCGmtnFaH0BgVX830SysOE/edit?usp=sharing
+            href: https://www.nytimes.com
           - icon: people-fill
             text: Ed Discussion
-            href: https://edstem.org/us/courses/70595/discussion
+            href: https://edstem.org/us/courses/90224/discussion
       - icon: file-check-fill
         text: "Canvas"
         menu:
           - icon: megaphone-fill
             text: Announcements
-            url: https://canvas.duke.edu/courses/50057/announcements
+            url: https://www.nytimes.com
           - icon: file-arrow-up-fill
             text: Gradescope
-            url: https://canvas.duke.edu/courses/50057/external_tools/181
+            url: https://www.nytimes.com
           - icon: alphabet-uppercase
             text: Gradebook
-            url: https://canvas.duke.edu/courses/50057/gradebook
+            url: https://www.nytimes.com
 
     style: docked
     search: true
