--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,7 +32,7 @@ website:
         menu:
           - icon: person-raised-hand
             text: Office hours
-            href: https://www.nytimes.com
+            href: https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing
           - icon: people-fill
             text: Ed Discussion
             href: https://edstem.org/us/courses/90224/discussion
