--- a/_quarto.yml
+++ b/_quarto.yml
@@ -81,6 +81,10 @@ website:
             text: Lab 1
           - href: lab/lab-2.qmd
             text: Lab 2
+      - section: "Homework"
+        contents:
+          - href: hw/hw-1.qmd
+            text: Homework 1
       - section: "Computing"
         contents:
           - href: computing/coding-access.qmd
